Fix cards not expanding when content overflows

--- a/src/jvmMain/sass/main.scss
+++ b/src/jvmMain/sass/main.scss
@@ -175,7 +175,7 @@ table.search-results {
 
   .beatmap {
     width: 100%;
-    height: 155px;
+    min-height: 155px;
     transition: height 0.2s;
 
     .card.colored {
